feat: 화살표 문자열 치환 기능 추가

--- a/popup.html
+++ b/popup.html
@@ -28,5 +28,6 @@
       <img src="images/reload-icon.svg" class="icon reload-icon" />
     </div>
     <script src="popup.js"></script>
+    <script src="list.js"></script>
   </body>
 </html>
