feat: 새 메모 추가하기 버튼 생성

--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,14 @@
         <div class="title">메모 제목입니다.</div>
         <div class="content">메모 내용이 들어갑니다. 테스트 메모 내용입니다</div>
       </div>
+      <div class="mini-memo">
+        <div class="title">메모 제목입니다.</div>
+        <div class="content">메모 내용이 들어갑니다. 테스트 메모 내용입니다</div>
+      </div>
+      <div class="add-memo">
+        <img src="images/add-icon.svg" class="icon add-icon" />
+        새 메모 작성하기
+      </div>
     </div>
     <script src="popup.js"></script>
     <script src="topbar.js"></script>
