feat: memoList 저장 및 불러오기 구현 완료

--- a/popup.html
+++ b/popup.html
@@ -30,13 +30,7 @@
       <img src="images/reload-icon.svg" class="icon reload-icon" />
     </div>
     <div class="memo-list">
-      <div class="mini-memo">
-        <div class="title">메모 제목입니다.</div>
-        <div class="content">메모 내용이 들어갑니다. 테스트 메모 내용입니다</div>
-      </div>
-      <div class="mini-memo">
-        <div class="title">메모 제목입니다.</div>
-        <div class="content">메모 내용이 들어갑니다. 테스트 메모 내용입니다</div>
+      <div class="memo-items">
       </div>
       <div class="add-memo">
         <img src="images/add-icon.svg" class="icon add-icon" />
@@ -45,5 +39,6 @@
     </div>
     <script src="popup.js"></script>
     <script src="topbar.js"></script>
+    <script src="memoList.js"></script>
   </body>
 </html>
