feat: reload button 비활성화

--- a/popup.html
+++ b/popup.html
@@ -26,9 +26,9 @@
         <div class="cancel">취소</div>
       </div>
     </div>
-    <div class="icon-wrap">
+    <!--div class="icon-wrap">
       <img src="images/reload-icon.svg" class="icon reload-icon" />
-    </div>
+    </div-->
     <div class="memo-list">
       <div class="memo-items">
       </div>
