feat: 동기화 알림 표시

--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,17 @@
         <img src="images/clear-icon.svg" class="icon clear-icon" />
       </div>
       <textarea spellcheck="false" placeholder="메모를 입력하세요." class="memo" name="memo"></textarea>
+      <div class="memo-bottombar">
+        <div class="icon-wrap">
+          <img class="loading-icon" src="images/loading-icon.svg" style="animation: rotate 2s linear infinite;" />
+          <img class="complete-icon" style="scale: 0; opacity: 0;" src="images/load-complete-icon.svg"/>
+        </div>
+        <span class="sync-text">동기화</span>
+        <div class="text-wrap">
+          <span class="loading-text">중...</span>
+          완료
+        </div>
+      </div>
     </div>
     <div class="black-screen"></div>
     <div class="full-screen">
