refactor: data.js 추가

--- a/popup.html
+++ b/popup.html
@@ -46,6 +46,7 @@
       </div>
     </div>
     <script src="popup.js"></script>
+    <script src="data.js"></script>
     <script src="topbar.js"></script>
     <script src="memoList.js"></script>
   </body>
