refactor: loading.js 분리

--- a/popup.html
+++ b/popup.html
@@ -49,5 +49,6 @@
     <script src="data.js"></script>
     <script src="topbar.js"></script>
     <script src="memoList.js"></script>
+    <script src="loading.js"></script>
   </body>
 </html>
