refactor: 파일 정리 및 icon 사이즈별로 추가

--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memozzang</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="memolist.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/memolist.css">
   </head>
   <body>
     <div class="memo-wrap">
@@ -45,10 +45,10 @@
         새 메모 작성하기
       </div>
     </div>
-    <script src="popup.js"></script>
-    <script src="data.js"></script>
-    <script src="topbar.js"></script>
-    <script src="memoList.js"></script>
-    <script src="loading.js"></script>
+    <script src="javascript/popup.js"></script>
+    <script src="javascript/data.js"></script>
+    <script src="javascript/topbar.js"></script>
+    <script src="javascript/memoList.js"></script>
+    <script src="javascript/loading.js"></script>
   </body>
 </html>
