feat: TopBar는 입력할 때나 메모를 누르면 들어가고 2초뒤 나옴.

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="memo-wrap">
-      <div class="memo-topbar">
+      <div class="memo-topbar active-memo-topbar">
         <img src="images/more-icon.svg" class="icon more-icon" />
         <img src="images/clear-icon.svg" class="icon clear-icon" />
       </div>
